biscuitman.css
/* 
	Biscuitman JS Styles
	https://github.com/replete/biscuitman

	This stylesheet is the source stylesheet
	and is processed to un-nested native CSS nesting
	and include vendor
*/

.biscuitman {
	--text: #444;
	--bg: #fff;
	--color: #105d89;

	width:100%;
	padding:20px;
	background:var(--bg);
	box-shadow: 0px -2px 10px rgba(0,0,0,.16);
	font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
	box-sizing: border-box;

	&:has(dialog[open]) {
		padding:0;

		article{
			display:none;
		}
	}

	* {
		box-sizing: border-box;
		font-size: 16px;
		padding:0;
		margin:0;
		line-height:1.4em;
	}

	article {
		position:relative;

		@media (min-width: 770px) {
		padding-right:calc(max(300px, 30vw) + 20px);

			nav {
				min-width:300px;
				width:30vw;
				position:absolute;
				bottom:50%;
				transform:translateY(50%);
				right:0;
			}
		}

		p {
			margin: 10px 0;
			font-size:13px;
			color: var(--text);

			@media (min-width: 575px) {
			font-size:14px;
			}
		}
	}

	button {
		background: var(--bg);
		border:2px solid var(--color);
		line-height:1em;
		padding:0.8em;
		margin-top:10px;
		color: var(--color);
		font-size:13px;
		border-radius:3px;
		cursor:pointer;

		&[data-id=accept] {
			background: var(--color);
			color: var(--bg) !important;
		}

		&[data-id=close] {
			border:none;
			outline:none;
			position:absolute;
			background:transparent;
			color: #000;
			top: 0;
			right:10px;
			line-height:1em;
			opacity:0.6;
			font-size:24px;
			user-select:none;
			z-index:2;
			padding:10px;
		}

		&[disabled] {
			display: none;
			/* This rule is for the 'force' option */
		}

		&:hover {
			opacity:0.8;
		}
	}

	nav {
		@media (min-width: 576px) {
		display:flex;
		width:100%;
		flex-direction: row-reverse;
		gap:10px;

		button {
			flex-grow:1;
			margin-bottom:0;
		}
		}
		@media (max-width: 575px) {
		display:flex;
		flex-direction: column;
		flex-grow:1;
		}
	}

	dialog[open] {
		border:0;
		width:100%;
		height:100%;
		max-height:100%;
		max-width:100%;

		@media (min-width: 576px) {
		box-shadow: 0px 0 8px rgba(0,0,0,.3);
		margin: auto auto;
		max-height:80vh;
		width:90vw;
		max-width: 860px;
		border-radius:10px;
		}
		@media (min-width:576px) and (min-height:1134px) {
		max-height:908px;
		}

		nav {
			position:relative;
			justify-self:flex-end;
		}
	}

	.bm-dialog {
		padding:20px;
		height:100%;
		display:flex;
		flex-direction:column;

		b {
			position:relative
		}

		> b::after {
			content:'';
			position:absolute;
			left:0;
			bottom:0;
			margin-bottom: -24px;
			width:100%;
			height:25px;
			background:linear-gradient(180deg, var(--bg) 20%, transparent);
			pointer-events:none;
			z-index:1;
		}

		nav::after {
			content:'';
			position:absolute;
			left:0;
			top:-24px;
			width:100%;
			height:25px;
			background:linear-gradient(0deg, var(--bg) 20%, transparent);
			pointer-events:none;
		}
	}

	.bm-sections {
		flex-shrink:1;
		overflow-y: scroll;
		height:100%;
		padding:15px 0;
		position:relative;
		scrollbar-color: #ddd var(--bg);
		@media (min-width:576px) {
			padding-right:4px;
			margin-right:-18px;
		}


		> p  {
			line-height:18px;
			padding-right:30px;
			
			span {
				font-size:13px;
				display:block;
				padding-bottom:5px;

				@media (min-width:576px) {
				font-size:14px;
				}

				&:has(.more) ~ span {
					display:none;
				}
			}			
		}
	}

	a {
		font-size:inherit;
		color: var(--color);
		display:inline-block;
		cursor:pointer;
		text-decoration:none;

		&:hover {
			text-decoration: underline
		}
	}

	section {
		position:relative;
		margin-bottom:10px;

		&:first-of-type {
			margin-top:10px;
		}
	}

	details {
		border:1px solid #ccc;
		padding:10px;
		border-radius:5px;
		box-shadow:0 2px 4px rgba(0,0,0,.1);
		list-style:none;

		&[open] summary b::after {
			transform:rotate(45deg) scale(0.3);
			margin:-3px 0 0 -2px;
		}
	}

	summary {
		width:100%;
		display:flex; /* hides marker */
		flex-direction: column;
		cursor:pointer;
		position: relative;
		list-style:none;
		padding: 5px 80px 10px 10px;

		b {
			margin-bottom:3px;

			&::after {
				content:'';
				display:block;
				height:1em;
				width:1em;
				border: 5px solid #777;
				border-left-color:transparent;
				border-top-color:transparent;
				border-radius:2px;
				transform:rotate(-45deg) scale(0.3);
				margin:-2px 0 0 -4px;
			}
		}

		p {
			font-size:14px;
			color: var(--text);
		}

		> * {
			display:inline-flex;
		}

		&::marker,
		&::-webkit-details-marker {
			display:none
		}
	}

	dl {
		display:flex;
		padding: 10px;
		margin:10px;
		background: #eee;

		dt,dd {
			color: var(--text);
			font-size:13px;
		}

		dt {
			min-width:120px;
			font-weight:bold;
			padding-right:30px;
		}
	}

	label {
		--height: 1.2em;
		--width: 2.3em;
		--gap: 2px;
		font-size:20px !important;
		position:absolute;
		top: 50%;
		right:20px;
		display:block;
		height:var(--height);
		width:var(--width);
		background-color: #999;
		border-radius:var(--height);
		transform: translateY(-50%);
		margin-top:-2px;

		&::before {
			content:'';
			display:block;
			position:absolute;
			background:var(--bg);
			height: calc(var(--height) - calc(var(--gap) * 2));
			width: calc(var(--height) - calc(var(--gap) * 2));
			height:var(--height);
			width:var(--height);
			border-radius:100%;
			left:var(--gap);
			left:0;
			top:50%;
			transform: translateY(-50%) scale(0.8);
			transform-origin: center center;
		}

		&:has(:checked) {
		background-color: var(--color);

			&::before {
				left: auto;
				right:var(--gap);
				right:0;
			}
		}

		&:has(:focus-within) {
			/* Show focus outline correctly correctly with keyboard focus */
			outline: auto highlight;
		}

		&:has([disabled]:checked) {
			opacity:0.6
		}

		input {
			opacity:0;
		}
	}
}

.js-bm-hidden {
	.biscuitman {
		padding:0;

		> article {
			display:none;
		}
	}
}

